--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ version: '2'
 services:
     db:
         image: mysql
-        ports: 
-            - 33306:3306
+        # Uncomment the following lines if you want to access your mysql port externally
+        # ports: 
+        #     - ${MYSQL_PORT}:3306
         volumes:
             - "./.data/db:/var/lib/mysql"
         environment:
@@ -36,8 +37,7 @@ services:
     apache:
         build: apache
         ports: 
-            - 81:80
-            - 444:443
+            - ${HTTP_PORT}:80
         links:
             - php5
         volumes_from:
