add missing `intl` extension

--- a/php5-fpm/Dockerfile
+++ b/php5-fpm/Dockerfile
@@ -5,7 +5,11 @@ RUN apt-get update && apt-get install -y \
   git \
   unzip \
   libmagickwand-dev \
+  zlib1g-dev libicu-dev g++ \
   && rm -rf /var/lib/apt/lists/*
+
+RUN docker-php-ext-configure intl
+RUN docker-php-ext-install intl
 
 # Install PHP extensions
 RUN pecl install imagick-3.4.1 \
