allow authorization header

--- a/apache/armycreator.conf
+++ b/apache/armycreator.conf
@@ -20,6 +20,8 @@
         AllowOverride All
         Require all granted
 
+        SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+
         # ------------------------------------------------------------------------------
         # | CORS-enabled images                                                        |
         # ------------------------------------------------------------------------------
