--- a/php7.0-fpm/Dockerfile
+++ b/php7.0-fpm/Dockerfile
@@ -47,7 +47,8 @@ ENV COMPOSER_ALLOW_SUPERUSER=1 \
     SYMFONY__MAILER_PASSWORD="" \
     SYMFONY__LOCALE="fr" \
     SYMFONY__SECRET="QKnWBZZDHlfyBlvNrNDe" \
-    SYMFONY__FORUM_SID="forum_ac_sid" \
+    SYMFONY__FORUM_SID="phpbb3_sid" \
+    SYMFONY__FORUM_COOKIENAME="phpbb3" \
     SYMFONY__DOMAIN__WEBSITE="localhost" \
     SYMFONY__DOMAIN__API="api.127.0.0.1.xip.io" \
     SYMFONY__DOMAIN__OAUTH2="oauth2.127.0.0.1.xip.io" \
